--- a/hercules.cabal
+++ b/hercules.cabal
@@ -16,6 +16,7 @@ cabal-version:       >=1.10
 library
   hs-source-dirs:      src
   exposed-modules:     Lib
+                       API
   build-depends:       base >= 4.7 && < 5
                      , aeson
                      , opaleye
