--- a/hercules.cabal
+++ b/hercules.cabal
@@ -27,6 +27,7 @@ library
                      , wai
                      , warp
   default-language:    Haskell2010
+  ghc-options:         -Wall
 
 executable hercules
   hs-source-dirs:      app
