--- a/hercules.cabal
+++ b/hercules.cabal
@@ -39,6 +39,7 @@ executable hercules
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   build-depends:       base
                      , hercules
+                     , bytestring
                      , optparse-applicative
   default-language:    Haskell2010
 
