--- a/hercules.cabal
+++ b/hercules.cabal
@@ -26,6 +26,7 @@ library
                      , postgresql-simple
                      , product-profunctors
                      , safe
+                     , servant-elm
                      , servant-server
                      , text
                      , wai
@@ -41,6 +42,15 @@ executable hercules
                      , hercules
                      , bytestring
                      , optparse-applicative
+  default-language:    Haskell2010
+
+executable gen-elm
+  hs-source-dirs:      gen-elm
+  main-is:             Main.hs
+  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
+  build-depends:       base
+                     , hercules
+                     , servant-elm
   default-language:    Haskell2010
 
 test-suite test
