--- a/hercules.cabal
+++ b/hercules.cabal
@@ -58,6 +58,7 @@ test-suite test
   hs-source-dirs:      test
   main-is:             Spec.hs
   build-depends:       base
+                     , hspec
                      , hercules
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   default-language:    Haskell2010
