--- a/hercules.cabal
+++ b/hercules.cabal
@@ -51,7 +51,11 @@ executable gen-elm
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   build-depends:       base
                      , hercules
+                     , elm-export
+                     , servant-auth-server
                      , servant-elm
+                     , servant-foreign
+                     , text
   default-language:    Haskell2010
 
 test-suite test
