Turn on MPTCs for stylish-haskell

--- a/.stylish-haskell.yaml
+++ b/.stylish-haskell.yaml
@@ -166,6 +166,6 @@ newline: lf
 # needs to be aware of these, so it can parse the file correctly.
 #
 # No language extensions are enabled by default.
-# language_extensions:
-  # - TemplateHaskell
+language_extensions:
+  - MultiParamTypeClasses
   # - QuasiQuotes
