Use new opaleye-gen

--- a/hercules.cabal
+++ b/hercules.cabal
@@ -50,6 +50,7 @@ library
                      , opaleye
                      , postgresql-simple
                      , product-profunctors
+                     , profunctors
                      , resource-pool
                      , safe
                      , servant-auth-server
