Fix getting started

--- a/hercules.conf.sample
+++ b/hercules.conf.sample
@@ -2,4 +2,6 @@ Config
   { configPort = 8080
   , configHostName = "localhost"
   , configConnectionString = "postgresql://hydra@/hydra"
+  , configGoogleAuthInfo = Nothing
+  , configGitHubAuthInfo = Nothing
   }
