Add Elm frontend based on hydra-frontend
https://github.com/domenkozar/hydra-frontend/commit/8a26e3b1ecc412dc735b1e439fb99ac9fbeff6a0

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,8 @@
 language: nix
 
+install:
+  - cd frontend && nix-shell --run "npm i" -j 8
+  - cd frontend && nix-shell --run "elm package install -y"
+
 script:
   - nix-build
