travis-ci: fix wrong cd

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,5 +8,5 @@ cache:
 
 script:
   - cd frontend && nix-shell --run "npm i" -j 8
-  - cd frontend && nix-shell --run "elm package install -y"
+  - nix-shell --run "elm package install -y"
   - nix-build
