Port frontend to Elm 0.18
Frontend now depends on backend to build the Hercules.elm file.

Backend and frontend now use the same git nixpkgs commit from pkgs.nix

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,9 +14,9 @@
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack --optimize-minimize --bail",
-    "watch": "webpack --watch",
-    "dev": "webpack-dev-server --watch --hot --port 3000"
+    "build": "eval \"$buildHercules\" && webpack --optimize-minimize --bail",
+    "watch": "eval \"$buildHercules\" && webpack --watch",
+    "dev": "eval \"$buildHercules\" && webpack-dev-server --watch --hot --port 3000"
   },
   "author": "Domen Kozar",
   "license": "ISC"
