Start adding github tokens

--- a/backend/hercules.cabal
+++ b/backend/hercules.cabal
@@ -42,6 +42,7 @@ library
                      , async
                      , blaze-html
                      , bytestring
+                     , github
                      , hoauth2
                      , http-client
                      , http-client-tls
