Use text for error message

--- a/backend/hercules.cabal
+++ b/backend/hercules.cabal
@@ -62,6 +62,7 @@ library
                      , profunctors
                      , resource-pool
                      , safe
+                     , say
                      , servant-auth-server
                      , servant-blaze
                      , servant-elm
