--- a/backend/hercules.cabal
+++ b/backend/hercules.cabal
@@ -15,34 +15,37 @@ cabal-version:       >=1.10
 
 library
   hs-source-dirs:      src
-  exposed-modules:     Hercules.Lib
+  exposed-modules:     Control.Monad.Except.Extra
+                       Data.ByteString.Extra
+                       Hercules.Lib
                        Hercules.API
                        Hercules.Config
                        Hercules.Database.Extra
                        Hercules.Database.Hercules
                        Hercules.Database.Hercules.Ready
                        Hercules.Database.Hydra
+                       Hercules.Encryption
+                       Hercules.Log
                        Hercules.OAuth
                        Hercules.OAuth.Authenticators
                        Hercules.OAuth.Authenticators.GitHub
                        Hercules.OAuth.Authenticators.Google
                        Hercules.OAuth.Types
                        Hercules.OAuth.User
-                       Hercules.Query.Hydra
                        Hercules.Query.Hercules
-                       Hercules.Log
+                       Hercules.Query.Hydra
                        Hercules.ServerEnv
                        Hercules.Static
-                       Control.Monad.Except.Extra
                        Network.URI.Extra
+                       Opaleye.Extra
                        Servant.Mandatory
                        Servant.Redirect
-                       Opaleye.Extra
   build-depends:       base                >= 4.7 && < 5
                      , aeson
                      , async
                      , blaze-html
                      , bytestring
+                     , cryptonite
                      , file-embed
                      , github
                      , hoauth2
@@ -52,6 +55,7 @@ library
                      , jose
                      , logging-effect
                      , markdown
+                     , memory
                      , monad-control
                      , mtl
                      , network-uri
@@ -73,6 +77,7 @@ library
                      , wai-extra
                      , warp
                      , wl-pprint-text
+                     , yaml
   default-language:    Haskell2010
   ghc-options:         -Wall
 
