--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-
 dist
 dist-*
 cabal-dev
@@ -20,7 +19,10 @@ cabal.sandbox.config
 cabal.project.local
 .HTF/
 dist/
+
 elm-stuff/
 node_modules/
 frontend/src/Hercules.elm
 docs/_build/
+
+secret.key
