backend: allow cross domain queries. wildcard CORS.
* allow frontend to query backend whather the domain = no restriction on
domain
* https://developer.mozilla.org/en-US/docs/Web/HTTP/Access_control_CORS

--- a/backend/hercules.cabal
+++ b/backend/hercules.cabal
@@ -74,6 +74,7 @@ library
                      , text
                      , time
                      , wai
+                     , wai-cors
                      , wai-extra
                      , warp
                      , wl-pprint-text
