--- a/backend/hercules.cabal
+++ b/backend/hercules.cabal
@@ -114,10 +114,12 @@ executable gen-docs
   build-depends:       base
                      , hercules
                      , lens
-                     , pandoc
+                     , aeson
+                     , bytestring
                      , servant-auth-server
                      , servant-docs
-                     , servant-pandoc
+                     , servant-swagger
+                     , swagger2
                      , servant-server
                      , text
   default-language:    Haskell2010
