Redirect / to /docs/ for swagger-ui

--- a/backend/hercules.cabal
+++ b/backend/hercules.cabal
@@ -120,8 +120,7 @@ executable gen-docs
   build-depends:       base
                      , hercules
                      , bytestring
-                     , servant-auth-swagger
-                     , servant-server
+                     , aeson
                      , text
   default-language:    Haskell2010
 
