--- a/haskell-nix-build/haskell-nix-build.cabal
+++ b/haskell-nix-build/haskell-nix-build.cabal
@@ -17,42 +17,29 @@ library
   hs-source-dirs:      src
   exposed-modules:     
                        Nix.Build 
-                       Nix.Build.Line
-                       Nix.Build.Pipe
-                       System.IO.Blocking
   other-modules:
-                       Paths_haskell_nix_build
   build-depends:       base                >= 4.7 && < 5
-                     , async
+                     , network
+                     -- , async
                      , bytestring
                      , directory
-                     , extra
+                     -- , extra
                      , filepath
+                     , logging-effect
+                     , wl-pprint-text
                      , mtl
-                     , optparse-applicative
-                     , pipes
-                     , say
+                     -- , optparse-applicative
+                     -- , pipes
+                     -- , say
                      , stm
                      , temporary
                      , text
                      , transformers
                      , typed-process
-                     , unix
+                     -- , unix
                      , vector
   default-language:    Haskell2010
   ghc-options:         -Wall
-
-executable hercules-build-hook
-  hs-source-dirs:      build-hook
-  main-is:             Main.hs
-  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
-  build-depends:       base
-                     , optparse-applicative
-                     , haskell-nix-build
-                     , pipes
-                     , say
-                     , text
-  default-language:    Haskell2010
 
 source-repository head
   type:     git
