--- a/haskell-nix-build/haskell-nix-build.cabal
+++ b/haskell-nix-build/haskell-nix-build.cabal
@@ -17,27 +17,26 @@ library
   hs-source-dirs:      src
   exposed-modules:     
                        Nix.Build 
+                       Nix.Build.Paths
+                       System.Environment.TH
   other-modules:
   build-depends:       base                >= 4.7 && < 5
-                     , network
-                     -- , async
                      , bytestring
                      , directory
-                     -- , extra
+                     , exceptions
                      , filepath
                      , logging-effect
-                     , wl-pprint-text
                      , mtl
-                     -- , optparse-applicative
-                     -- , pipes
-                     -- , say
+                     , network
                      , stm
+                     , template-haskell
                      , temporary
                      , text
+                     , th-lift
                      , transformers
                      , typed-process
-                     -- , unix
                      , vector
+                     , wl-pprint-text
   default-language:    Haskell2010
   ghc-options:         -Wall
 
